--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next": "^12.1.0",
     "phaser": "^3.86.0",
     "react": "17.0.2",
+    "react-cookie": "^7.2.2",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
