--- a/package.json
+++ b/package.json
@@ -27,8 +27,9 @@
     "@types/node": "17.0.21",
     "@types/react": "17.0.41",
     "autoprefixer": "^10.4.4",
-    "eslint": "8.11.0",
+    "eslint": "^9.14.0",
     "eslint-config-next": "^12.3.4",
+    "eslint-plugin-react": "^7.37.2",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.0.23",
     "typescript": "4.6.2"
