--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.1.0",
-    "@supabase/ui": "0.37.0-alpha.81",
+    "@supabase/ui": "^0.36.5",
     "lodash.clonedeep": "^4.5.0",
     "lodash.samplesize": "^4.2.0",
     "lodash.throttle": "^4.1.1",
