--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "eslint": "^9.14.0",
     "eslint-config-next": "^15.0.3",
     "eslint-plugin-react": "^7.37.2",
+    "eslint-plugin-react-hooks": "^5.0.0",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.0.23",
     "typescript": "4.6.2"
