--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ion-phaser/react": "^1.3.0",
     "@supabase/supabase-js": "^2.1.0",
     "@supabase/ui": "0.37.0-alpha.81",
     "lodash.clonedeep": "^4.5.0",
